examples/test/testpolicy5099.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5099
  namespace: namespace83
spec:
  podSelector:
    matchLabels:
      key42: value3
      key31: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value15
          key37: value10
      podSelector:
        matchLabels:
          key22: value40
